codepkg/objects/Faculty__c.object
<CustomObject>
    <fields>
        <fullName>CountOfEmployees__c</fullName>
        <label>CountOfEmployees</label>
        <summaryForeignKey>Employee_uni__c.Faculty__c</summaryForeignKey>
        <summaryOperation>count</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>CountOfStudents__c</fullName>
        <label>CountOfStudents</label>
        <summaryForeignKey>Student__c.Faculty__c</summaryForeignKey>
        <summaryOperation>count</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>Dean__c</fullName>
        <label>Dean</label>
        <length>255</length>
        <required>true</required>
        <type>Text</type>
    </fields>
    <label>Faculty</label>
    <listViews>
        <fullName>All</fullName>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <label>Faculty Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Faculties</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>